# Realm

./: .env.example  .gitignore  AGENTS_MIGRATION.md  LICENSE  LLM.MD  NETWORK_CLI_GUIDE.md  README.md  UI_BACKEND_MAPPING.md  network.sh  pyproject.toml
agents/: .env.example  README.md  agent.py  agent_mesh_trio.py  agent_novita_a.py  agent_novita_b.py  agent_novita_compare.py  agent_novita_duo.py  mesh_config.py  mesh_llm.py  mesh_runtime.py  mesh_tools.py  novita.py  pretty_logs.py
agents/config/: mesh_agents.yaml
agents/prompts/: agent_1.txt  agent_2.txt  agent_3.txt
docker/: docker-compose.yml
examples/: agent_a.py  agent_b.py  agent_rpc_client.py  agent_rpc_worker.py  list_agents.py
services/registry/: Dockerfile  main.py
src/agentnet/: __init__.py  __main__.py  config.py  dev_auth.py  events.py  node.py  registry.py  schema.py  sdk.py  subjects.py  utils.py
tools/: nba_tools.py
ts-sdk/agentnet-sdk/: README.md  package-lock.json  package.json
ts-sdk/agentnet-sdk/src/: client.ts  events.ts  index.ts  subjects.ts  types.ts  utils.ts
