[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentnet-realm"
version = "0.1.1"
description = "Minimal NATS network for agent-to-agent messaging and discovery"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "nats-py>=2.8.0,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "cryptography>=44.0.0,<46.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "requests>=2.31.0,<3.0.0",
  "diskcache>=5.6.0,<6.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "rich>=13.0.0,<14.0.0",
]

[project.scripts]
agentnet = "agentnet.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
